fix: correctly process dark mode

--- a/app/display/styles/reset.css
+++ b/app/display/styles/reset.css
@@ -8,6 +8,7 @@ html,
 body {
   min-height: 100vh;
   font-family: var(--font-industrial);
+  color: var(--p-text-color);
 }
 
 html,
